--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "react-scripts": "3.3.0"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "set PORT=80 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
