--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "3.3.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "set PORT=80 && react-scripts start",
     "build": "react-scripts build",
