--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://eman3220.github.io/kookie",
+  "homepage": "https://eman3220.github.io/kookie",
   "name": "Kookie",
   "version": "0.1.0",
   "private": true,
